# 2D-Pathfinder

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
Engine/: CMakeLists.txt
Engine/Engine/: Engine.hpp
Engine/Engine/Core/: Base.hpp  Time.hpp  UUID.cpp  UUID.hpp
Engine/Engine/Core/Application/: ApplicationLayer.hpp  EngineApplication.cpp  EngineApplication.hpp  SceneLayer.cpp  SceneLayer.hpp
Engine/Engine/Core/RTTI/: RTTI.hpp
Engine/Engine/Core/Scene/: Scene.cpp  Scene.hpp
Engine/Engine/ECS/Component/: Component.cpp  Component.hpp
Engine/Engine/ECS/EntitiesRegistry/: ComponentSystem.cpp  ComponentSystem.hpp  EntitiesRegistry.cpp  EntitiesRegistry.hpp  IComponentSystem.hpp
Engine/Engine/ECS/Entity/: Entity.cpp  Entity.hpp
Engine/Engine/EntityComponentSystem/Component/: Component.cpp  Component.hpp
Engine/Engine/EntityComponentSystem/EntitiesRegistry/: EntitiesRegistry.hpp
Engine/Engine/EntityComponentSystem/Entity/: Entity.cpp  Entity.hpp
Engine/src/: Engine.cpp
Engine/src/Core/: UUID.cpp
Engine/src/Core/Application/: ApplicationLayer.cpp  EngineApplication.cpp
Engine/src/Core/Scene/: Scene.cpp
Engine/src/EntityComponentSystem/Component/: Component.cpp
Engine/src/EntityComponentSystem/EntitiesRegistry/: EntitiesRegistry.cpp
Engine/src/EntityComponentSystem/Entity/: Entity.cpp
Game/: CMakeLists.txt
Game/includes/: main.hpp
Game/src/: Game.cpp  GameWithEngine.cpp  main.cpp
Game/src/Game/: PanelRenderer.hpp  PathfinderRunner.hpp  TilesRenderer.hpp  main.cpp
PathfindingSystem/: CMakeLists.txt  TGraph.h  TNode.cpp  TNode.h
PathfindingSystem/AStar/: AStar.cpp  AStar.h
PathfindingSystem/BFS/: BFSUtils.h
PathfindingSystem/PathfindingSystem/: PathfindingSystem.cpp  PathfindingSystem.hpp
PathfindingSystem/Utilities/: Algo.h  NodeElements.h  NodeFunctors.h
PathfindingSystem/includes/: PathfindingSystem.hpp
PathfindingSystem/src/: AStar.h  PathfindingSystem.cpp
PathfindingSystem/src/BFS/: BFSUtils.h  TGraph.h  TNode.h
scripts/: install.sh  osx-install.sh  windows-build-debug.bat  windows-install.bat
